src/objects/FieloAlpha__Promotion__c.object
<CustomObject>
    <description>Campaigns consisting of rules that are only valid for a period of time.</description>
    <fields>
        <fullName>FieloAlpha__CountDays__c</fullName>
        <formula>FieloAlpha__FinalDate__c  - FieloAlpha__InitialDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Description__c</fullName>
        <description>A description for this promotion.</description>
        <inlineHelpText>Enter a description for this promotion.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__FinalDate__c</fullName>
        <description>The end date for this promotion.</description>
        <inlineHelpText>Set the date when this promotion will finish.</inlineHelpText>
        <label>Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__InitialDate__c</fullName>
        <description>The starting date for this promotion.</description>
        <inlineHelpText>Set the date when this promotion will start.</inlineHelpText>
        <label>Initial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to wich this promotion belongs.</description>
        <inlineHelpText>Enter the program to which this promotion belongs.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloAlpha__Program__c</referenceTo>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Incentive</label>
    <listViews>
        <fullName>FieloAlpha__All_Promotions</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Program__c</columns>
        <columns>FieloAlpha__InitialDate__c</columns>
        <columns>FieloAlpha__FinalDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Promotions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <recordTypes>
        <fullName>FieloAlpha__Standard_Promotion</fullName>
        <active>true</active>
        <label>Standard Promotion</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloAlpha__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloAlpha__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Modify_RecordType</fullName>
        <active>true</active>
        <description>Validate that the user wont change the recordType</description>
        <errorConditionFormula>ISCHANGED(RecordTypeId)</errorConditionFormula>
        <errorMessage>The Record Type cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Undelete_Default</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL(FieloAlpha__InitialDate__c )  &amp;&amp;
ISNULL( FieloAlpha__FinalDate__c )</errorConditionFormula>
        <errorMessage>Can not delete the Default Promotion</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloAlpha__Validate_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>FieloAlpha__InitialDate__c   &gt; FieloAlpha__FinalDate__c</errorConditionFormula>
        <errorMessage>Final Date must be great or equal to Initial Date</errorMessage>
    </validationRules>
</CustomObject>